[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario_gym"
version = "0.2.0"
authors = [
    { name="Hamish Scott", email="hamish@drisk.ai" },
]
description="scenario_gym - a lightweight framework for learning from scenario data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/driskai/scenario_gym"